WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306367
Video hangs on autoplay after finishing first playback on nba.com
https://bugs.webkit.org/show_bug.cgi?id=306367
Summary
Video hangs on autoplay after finishing first playback on nba.com
phinehas133
Reported
2026-01-27 13:35:32 PST
see title
Attachments
Add attachment
proposed patch, testcase, etc.
phinehas133
Comment 1
2026-01-27 13:35:33 PST
<
rdar://problem/166576200
>
phinehas133
Comment 2
2026-01-27 13:37:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57353
EWS
Comment 3
2026-01-29 12:11:11 PST
Committed
306436@main
(343595c84e82): <
https://commits.webkit.org/306436@main
> Reviewed commits have been landed. Closing PR #57353 and removing active labels.
phinehas133
Comment 4
2026-02-04 14:08:20 PST
<
rdar://problem/169474365
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug