Cherry-pick 343595c84e82. rdar://169474365

Video hangs on autoplay after finishing first playback on nba.com
    https://bugs.webkit.org/show_bug.cgi?id=306367
    rdar://166576200

    Reviewed by Jer Noble.

    Enable the existing needsPerDocumentAutoplayBehavior quirk (currently used for
    Netflix) for nba.com on iPadOS. This allows playlist continuation after initial
    user interaction while maintaining the autoplay policy for other sites.

    * Source/WebCore/page/Quirks.cpp:
    (WebCore::Quirks::needsPerDocumentAutoplayBehavior const):
    (WebCore::handleNBAQuirks):
    * Source/WebCore/page/QuirksData.h:

    Canonical link: https://commits.webkit.org/306436@main

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::needsPerDocumentAutoplayBehavior const):
(WebCore::handleNBAQuirks):
* Source/WebCore/page/QuirksData.h:

Identifier: 305413.256@safari-7624-branch